--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "express": "^4.17.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.2.2"
   }
 }
